--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,3 @@
-<h1>Welcome to Dealership Central</h1>
+<h1>Welcome to Dealership Saver</h1>
 <a href="/dealerships">See Dealership List</a>
-<!--  want buttons for these, check how to change target to span from a -->
 <a href="/dealerships/new">Add New Dealership</a>
