fixes forms to require all necessary inputs

--- a/views/success.erb
+++ b/views/success.erb
@@ -1,3 +1,8 @@
 <h1>Success!</h1>
-<a href="/vehicles">See Vehicle List</a>
-<a href="/vehicle/new">Add New Vehicle</a>
+<ul>
+  <li><a href="/vehicles">See Vehicle List</a></li>
+  <li><a href="/vehicles_form/new">Add New Vehicle</a></li>
+</ul>
+<ul>
+  <li><a href="/">Back to Main</a></li>
+</ul>
